fixed thongKeNV